@@ -1,5 +1,6 @@
 Version 1.1.0-CVS (?? ??? 2006)
   - Fixed the following bug reports on SourceForge:
+      1457983: Assistants don't delete events for everyone
       1487016: Events not listing in time order
       1492216: Firefox 'Live Bookmark' shows '(Empty)'
       1492208: Entries not displayed on last day of week in 'Week' view
